用户中心内容

--- a/dailyfresh/templates/login.html
+++ b/dailyfresh/templates/login.html
@@ -25,7 +25,8 @@
                 else
                 {
                     // 登录成功
-                    location.href = '/'  //跳转到首页
+                    // alert(data.next)
+                    location.href = data.next  //跳转到首页
                 }
             })
 
