--- a/dailyfresh/static/css/main.css
+++ b/dailyfresh/static/css/main.css
@@ -17,11 +17,11 @@ html,body{height:100%}
 	line-height:29px;
 }
 
-.login_info{
-	display:none;
-}
+/*.login_info{*/
+	/*display:none;*/
+/*}*/
 
-.login_info em{color:#ff8800}
+.login_btn em{color:#ff8800}
 
 .login_btn a,.user_link a{
 	color:#666;
