--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -11,20 +11,25 @@
     {% block topfiles %}{% endblock topfiles %}
 </head>
 <body>
-{# 页面顶部欢迎信息快 #}
+{# 页面顶部欢迎信息块 #}
 {% block header_con %}
-    <div class="header_con">
+	<div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
-					<span>|</span>
-					<a href="register.html">注册</a>
-				</div>
+                {% if request.session.is_login %}
+                    <div class="login_btn fl">
+                        欢迎您：<em>{{ request.session.username }}</em>
+                        <span>|</span>
+                        <a href="/user/logout/">退出</a>
+                    </div>
+                {% else %}
+                    <div class="login_btn fl">
+                        <a href="/user/login/">登录</a>
+                        <span>|</span>
+                        <a href="/user/register/">注册</a>
+                    </div>
+                {% endif %}
 				<div class="user_link fl">
 					<span>|</span>
 					<a href="user_center_info.html">用户中心</a>
@@ -34,13 +39,12 @@
 					<a href="user_center_order.html">我的订单</a>
 				</div>
 			</div>
-		</div>
+		</div>		
 	</div>
 {% endblock header_con %}
-
 {# 页面搜索框块 #}
 {% block search_bar %}
-    <div class="search_bar clearfix">
+	<div class="search_bar clearfix">
 		<a href="base.html" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -53,8 +57,7 @@
 	</div>
 {% endblock search_bar %}
 {# 页面主体内容块 #}
-{% block body %} {% endblock body %}
-
+{% block body %}{% endblock body %}
 
 	<div class="footer">
 		<div class="foot_link">
@@ -64,15 +67,14 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>
+			<a href="#">友情链接</a>		
 		</div>
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-
-{# 网页底部ｈｔｍｌ标签块#}
-{% block bottom %}{% endblock bottom %}
-
-{# 网页的底部引入文件块 #}
-{% block bottomfiles %}{% endblock bottomfiles %}
+    {# 网页底部html标签块 #}
+    {% block bottom %}{% endblock bottom %}
+    {# 网页底部引入文件块 #}
+	{% block bottomfiles %}{% endblock bottomfiles %}
 </body>
+</html>
