--- a/dailyfresh/templates/login.html
+++ b/dailyfresh/templates/login.html
@@ -1,14 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-登录</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}天天生鲜-登陆{% endblock %}
+{% load staticfiles %}
+{% block topfiles %}
+      <script src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+      <script>
+    $(function () {
+        // 绑定btnLogin的click事件
+        $('#btnLogin').click(function () {
+            // 1.获取用户输入的用户名和密码
+            username = $('#username').val()
+            password = $('#pwd').val()
+            csrf = $('input[name="csrfmiddlewaretoken"]').val()
+            remember = $('input[name="remember"]').is(':checked')
+            //alert(remember)
+            // 2.发起一个ajax请求 post
+            params = {'username':username, 'password':password,
+                'csrfmiddlewaretoken':csrf, 'remember':remember}
+            $.post('/user/login_check/',params, function (data) {
+                // 进行处理
+                if (data.res == 0){
+                    // 用户名或密码错误
+                    $('.user_error').text('用户名或密码错误').show()
+                }
+                else
+                {
+                    // 登录成功
+                    location.href = '/'  //跳转到首页
+                }
+            })
+
+        })
+    })
+    </script>
+{% endblock topfiles %}
+{% block header_con %}{% endblock header_con%}
+{% block search_bar %}{% endblock search_bar %}
+{% block body %}
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>	
+		<a href="index.html" class="login_logo"><img src="{% static 'images/logo02.png' %}"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -21,36 +50,21 @@
 					<a href="#">立即注册</a>
 				</div>
 				<div class="form_input">
-					<form>
-						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
+{#					<form>#}
+                        {% csrf_token %}
+						<input type="text" id="username" class="name_input" value="{{ username }}">
 						<div class="user_error">输入错误</div>
-						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
+						<input type="password" id="pwd" class="pass_input" placeholder="请输入密码">
 						<div class="pwd_error">输入错误</div>
 						<div class="more_input clearfix">
-							<input type="checkbox" name="">
+							<input type="checkbox" name="remember">
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
-						<input type="submit" name="" value="登录" class="input_submit">
-					</form>
+						<input type="button" id="btnLogin"  value="登录" class="input_submit">
+{#					</form>#}
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="footer no-mp">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-	
-</body>
-</html>
+{% endblock body %}
