--- a/dailyfresh/templates/index.html
+++ b/dailyfresh/templates/index.html
@@ -55,7 +55,7 @@
 				    <a href="/goods/{{ fruit.id }}/">{{ fruit.goods_name }}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/list/1/1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -77,8 +77,10 @@
 			<h3 class="fl" id="model02">海鲜水产</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">河虾</a>
-				<a href="#">扇贝</a>				
+                {% for goods in seafood_new %}
+				<a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a>
+                {% endfor %}
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -86,26 +88,13 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="{% static 'images/banner02.jpg' %}"></div>
 			<ul class="goods_list fl">
+                {% for goods in seafood %}
 				<li>
-					<h4><a href="#">青岛野生海捕大青虾</a></h4>
-					<a href="#"><img src="{% static 'images/../static/goods/goods018.jpg' %}"></a>
-					<div class="prize">¥ 48.00</div>
+					<h4><a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+					<a href="/goods/{{ goods.id }}"><img src="{% static goods.img_url %}"></a>
+					<div class="prize">¥ {{ goods.goods_price }}</div>
 				</li>
-				<li>
-					<h4><a href="#">扇贝</a></h4>
-					<a href="#"><img src="{% static 'images/../static/goods/goods019.jpg' %}"></a>
-					<div class="prize">¥ 46.00</div>
-				</li>
-				<li>
-					<h4><a href="#">冷冻秋刀鱼</a></h4>
-					<a href="#"><img src="{% static 'images/../static/goods/goods020.jpg' %}"></a>
-					<div class="prize">¥ 19.00</div>
-				</li>
-				<li>
-					<h4><a href="#">基围虾</a></h4>
-					<a href="#"><img src="{% static 'images/../static/goods/goods021.jpg' %}"></a>
-					<div class="prize">¥ 25.00</div>
-				</li>
+                {% endfor %}
 			</ul>
 		</div>
 	</div>
@@ -115,36 +104,24 @@
 			<h3 class="fl" id="model03">猪牛羊肉</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for goods in meat_new %}
+				<a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a>
+                {% endfor %}
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
-			<div class="goods_banner fl"><img src="images/banner03.jpg"></div>
+			<div class="goods_banner fl"><img src="{% static 'images/banner03.jpg' %}"></div>
 			<ul class="goods_list fl">
+                {% for goods in meat %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+					<a href="/goods/{{ goods.id }}"><img src="{% static goods.img_url %}"></a>
+					<div class="prize">¥ {{ goods.goods_price }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+                {% endfor %}
 			</ul>
 		</div>
 	</div>
@@ -154,36 +131,25 @@
 			<h3 class="fl" id="model04">禽类蛋品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for goods in eggs_new %}
+				<a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a>
+                {% endfor %}
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
-			<div class="goods_banner fl"><img src="images/banner04.jpg"></div>
+			<div class="goods_banner fl"><img src="{% static 'images/banner04.jpg' %}"></div>
 			<ul class="goods_list fl">
+                {% for goods in eggs %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+					<a href="/goods/{{ goods.id }}"><img src="{% static goods.img_url %}"></a>
+					<div class="prize">¥ {{ goods.goods_price }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+				{% endfor %}
+
 			</ul>
 		</div>
 	</div>
@@ -193,75 +159,50 @@
 			<h3 class="fl" id="model05">新鲜蔬菜</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+				{% for goods in vegetables_new %}
+				<a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a>
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
-			<div class="goods_banner fl"><img src="images/banner05.jpg"></div>
+			<div class="goods_banner fl"><img src="{% static 'images/banner05.jpg' %}"></div>
 			<ul class="goods_list fl">
+				{% for goods in vegetables  %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+					<a href="/goods/{{ goods.id }}"><img src="{% static goods.img_url %}"></a>
+					<div class="prize">¥ {{ goods.goods_price }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+				{% endfor %}
+
 			</ul>
 		</div>
 	</div>
-
 	<div class="list_model">
 		<div class="list_title clearfix">
 			<h3 class="fl" id="model06">速冻食品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+				{% for goods in frozen_new %}
+				<a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a>
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
-			<div class="goods_banner fl"><img src="images/banner06.jpg"></div>
+			<div class="goods_banner fl"><img src="{% static 'images/banner06.jpg' %}"></div>
 			<ul class="goods_list fl">
+				{% for goods in vegetables  %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="/goods/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+					<a href="/goods/{{ goods.id }}"><img src="{% static goods.img_url %}"></a>
+					<div class="prize">¥ {{ goods.goods_price }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+				{% endfor %}
+
 			</ul>
 		</div>
 	</div>
