--- a/dailyfresh/templates/detail.html
+++ b/dailyfresh/templates/detail.html
@@ -13,7 +13,7 @@
 				<h1>全部商品分类</h1>	
 				<span></span>			
 				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
+					<li><a href="/list/1/1/" class="fruit">新鲜水果</a></li>
 					<li><a href="#" class="seafood">海鲜水产</a></li>
 					<li><a href="#" class="meet">猪牛羊肉</a></li>
 					<li><a href="#" class="egg">禽类蛋品</a></li>
@@ -34,7 +34,7 @@
 	<div class="breadcrumb">
 		<a href="#">全部分类</a>
 		<span>></span>
-		<a href="#">{{ type_title }}</a>
+		<a href="/list/1/1/">{{ type_title }}</a>
 		<span>></span>
 		<a href="#">商品详情</a>
 	</div>
