--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     {# 网页顶部引入文件块 #}
-    {% block topfiles %}{% endblock topfiles %}
+    {% block topfiles %}
+         <script src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+    {% endblock topfiles %}
 </head>
 <body>
 {# 页面顶部欢迎信息块 #}
@@ -39,7 +41,7 @@
 					<a href="user_center_order.html">我的订单</a>
 				</div>
 			</div>
-		</div>		
+		</div>
 	</div>
 {% endblock header_con %}
 {# 页面搜索框块 #}
@@ -54,7 +56,7 @@
 		</div>
 		<div class="guest_cart fr">
 			<a href="#" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">1</div>
+			<div class="goods_count fl" id="show_count">0</div>
 		</div>
 	</div>
 {% endblock search_bar %}
@@ -74,6 +76,18 @@
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
+    {% block cart_count %}
+        <script>
+        index = $('.login_btn').text().indexOf('登录')
+        if (index < 0)
+        {
+            //　用户已登录 /cart/count/ {'res':商品总数}
+          $.get('/cart/count/', function(data){
+              $('#show_count').text(data.res)
+          })
+        }
+        </script>
+    {% endblock cart_count %}
     {# 网页底部html标签块 #}
     {% block bottom %}{% endblock bottom %}
     {# 网页底部引入文件块 #}
