购物车页面初级版本

--- a/dailyfresh/templates/detail.html
+++ b/dailyfresh/templates/detail.html
@@ -61,7 +61,7 @@
 	<div class="breadcrumb">
 		<a href="#">全部分类</a>
 		<span>></span>
-		<a href="#">{{ type_title }}</a>
+		<a href="/list/1/1/">{{ type_title }}</a>
 		<span>></span>
 		<a href="#">商品详情</a>
 	</div>
