--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -34,11 +34,11 @@
                 {% endif %}
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/user/">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="/user/order/">我的订单</a>
 				</div>
 			</div>
 		</div>
@@ -47,7 +47,7 @@
 {# 页面搜索框块 #}
 {% block search_bar %}
 	<div class="search_bar clearfix">
-		<a href="base.html" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
+		<a href="/" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="search_con fl">
             <form method="get" action="/search/">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
@@ -55,7 +55,7 @@
             </form>
 		</div>
 		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
+			<a href="/cart/" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">0</div>
 		</div>
 	</div>
