--- a/dailyfresh/templates/cart.html
+++ b/dailyfresh/templates/cart.html
@@ -94,23 +94,144 @@
             error_update = false //false代表默认更新成功
             function update_remote_cart_count(goods_id, goods_count){
                 $.ajax({
-                    'url':'/cart/update/?goods_id='+goods_id+'goods_count'+goods_count,
+                    'url':'/cart/update/?goods_id='+goods_id+'&goods_count='+goods_count,
                     'async':false, //同步
                     'success':function(data){
                         //返回的json数据说明更新是否成功
                         if (data.res == 0)
                         {
                             //0为更新失败
+
                             error_update = true
                         }
                         else
                         {
                             //否则更新成功
-                            erro_update = false
+
+                            error_update = false
+
                         }
                     }
                 })
             }
+
+             //实现商品的增加
+            $('.add').click(function(){
+                //1.获取原有购物车中商品的数目
+                goods_count = $(this).next().val()
+                //获取商品的id
+                goods_id = $(this).next().attr('goods_id')
+                //2.更新数据库中s_cart表中的数据
+                update_remote_cart_count(goods_id, parseInt(goods_count)+1)
+{#                alert(error_update)#}
+                //更新成功
+                if (error_update == false){
+                    //2.数目加1
+                    goods_count = parseInt(goods_count)+1
+
+                    //3.设置购物车中商品的数量
+                     $(this).next().val(goods_count)
+                    // 4.判断当前商品是否选中
+                    is_checked = $(this).parents('ul').find(':checkbox').prop('checked')
+                    if (is_checked == true){
+                        update_all_goods_info()
+
+                    }
+                    else
+                    {
+                        update_goods_info($(this).parents('ul'))
+                    }
+                    update_cart_count()
+
+                    }
+
+            })
+
+            //实现商品的减少
+            $('.minus').click(function(){
+                //1.获取原有购物车中商品的数量
+                goods_count = $(this).prev().val()
+                //2.获取商品的id
+                goods_id = $(this).prev().attr('goods_id')
+                //判断商品减少后是不是负数
+                if(parseInt(goods_count)-1 > 0)
+                {
+                    //3.更新数据库中s_cart表中数据
+                    update_remote_cart_count(goods_id, parseInt(goods_count)-1)
+                    //判断更新是否成功
+                    if(error_update == false)
+                    {
+                        //4.更新成功,数目减1
+                        goods_count = parseInt(goods_count)-1
+                        //5.设置购物车商品的数量
+                        $(this).prev().val(goods_count)
+                        //6.判断当前商品是否被选中
+                        is_checked = $(this).parents('ul').find(':checkbox').attr('checked')
+                        if(is_checked == true)
+                        {
+                            //当前商品被选中，更新全部商品
+                            update_all_goods_info()
+                        }
+                        else
+                        {
+                            //当前商品没有被选中，更新当前商品
+                            update_goods_info($(this).parents('ul'))
+                        }
+                        //更新购物车商品总数
+                        update_cart_count()
+                    }
+
+                }
+            })
+
+
+            //记录用户手动输入之前的商品数目
+            pre_goods_count = 0
+            $('.num_show').focus(function(){
+                pre_goods_count = $(this).val()
+            })
+
+            //手动输入商品的数目
+            $('.num_show').blur(function(){
+                //1.获取原有购物车中商品的数目
+                goods_count = $(this).val()
+                //2.获取商品的id
+                goods_id = $(this).attr('goods_id')
+                //判断输入内容是否符合规则
+                if(isNaN(goods_count) ||  goods_count.trim().length<=0 || parseInt(goods_count)<=0) {
+                    $(this).val(pre_goods_count)
+                }
+                else
+                {
+                    // 更新数据库中s_cart表中的数据
+                    update_remote_cart_count(goods_id, parseInt(goods_count))
+                    //判断更新是否成功
+                    if(error_update == false)
+                    {
+                        //更新成功后判断商品是否被选中
+                        is_checked = $(this).parents('ul').find(':checkbox').attr('checked')
+                        if(is_checked == true)
+                        {
+                            //商品被选中，更新全部商品信息
+                            update_all_goods_info()
+
+                        }
+                        else{
+                            //商品没有被选中，更新当前商品信息
+                            update_goods_info($(this).parents('ul'))
+
+                        }
+                        update_cart_count()
+                    }
+                    else
+                    {
+                        $(this).val(pre_goods_count)
+                    }
+
+                }
+
+            })
+
 
         })
     </script>
